@@ -22,8 +22,10 @@
       <w>fieger</w>
       <w>firefox</w>
       <w>fitvids</w>
+      <w>gform</w>
       <w>gmpg</w>
       <w>gravatar</w>
+      <w>gravityforms</w>
       <w>iframe</w>
       <w>jetpack</w>
       <w>mailto</w>
